--- a/live-casino.html
+++ b/live-casino.html
@@ -237,12 +237,13 @@
 			<section class="betnero_top-description">
 				<div class="betnero_top-description__container betnero_bg-color-2">
 					<h3 class="betnero_top-description__title">
-						Slot Machine Online AAMS - Fino a 1.300€ di Bonus
+						Casino Live Online: L’offerta di Betnero
 					</h3>
 					<div class="betnero_top-description__text">
-						<p><span class="betnero_stars">&#9733;&#9733;&#9733;&#9733;&#9733;</span> Le Migliori Slot Machine
-							Online <img src="img/icons/double-arrow.png" alt="arrows"> Super Bonus fino a €1.300 Il più
-							elevato in assoluto in Italia! La Slot Gallina 🦃 in Esclusiva <img src="img/icons/check.svg" alt="check"> Solo Slot AAMS. Perché giocare alle Slot su BetNero? Ecco alcuni validi motivi:</p>
+						<p>Se sei alla ricerca di un ottimo Casino Live per giocare dal vivo mentre stai comodamente in
+							poltrona, allora sei sul sito che fa al caso tuo. Betnero ti propone una delle più vaste selezioni
+							di giochi casino in diretta streaming, esattamente come se ti trovassi in una delle migliori sale
+							da gioco al mondo. Ed in effetti è così!</p>
 						<!-- SHOW MORE BLOCK -->
 						<div data-showmore class="betnero_show-more">
 							<div data-showmore-content="0" class="betnero_show-more__content">
@@ -272,7 +273,7 @@
 							<a href="">Home</a>
 						</div>
 						<div class="betnero_breadcrumbs__item">
-							<a href="">Casino</a>
+							<a href="">Live Casino</a>
 						</div>
 						<div class="betnero_breadcrumbs__item">
 							Più popolari
@@ -778,17 +779,15 @@
 				<div class="betnero_info-block__container betnero_bg-color-2">
 					<!-- TEXT-BLOCK -->
 					<div class="betnero_info-block__text-block">
-						<h3 class="betnero_info-block__text-block_title">Su Betnero le Slot Machine più Popolari</h3>
-						<p>Come ti sarà facile immaginare, le differenze tra i casinò terrestri e i casinò online sono
-							notevoli.</p>
-						<p>L'ebbrezza del gioco in un vero casinò, infatti, non può che essere indubbiamente più immersiva
-							sotto aspetti sensoriali che sono difficili da eguagliare: questo è uno dei motivi per cui i casinò
-							online sono in continua evoluzione per offrire un'esperienza sempre più coinvolgente.</p>
-						<p>In Italia, inoltre, i casinò terrestri legali attualmente attivi sono soltanto 5, e tutti nel Nord
-							Italia - due a Venezia, uno a Sanremo, un altro a Saint Vincent, per finire con il Casinò di
-							Campione d'Italia, riaperto di recente, che appartiene alla provincia di Como ma è situato in
-							Svizzera - pertanto non sono facilmente raggiungibili da tutti coloro che desiderano un’esperienza
-							di gioco dal vivo.</p>
+						<h3 class="betnero_info-block__text-block_title">I giochi del Casinò Live di Betnero</h3>
+						<p>Su Betnero trovi tutti i giochi dal vivo direttamente per te e in molte varianti diverse, insieme
+							con titoli che solo noi possiamo offrirti! Uno dei punti di forza del nostro casino live aams è
+							proprio quello di offrire molta varietà e scelta agli utenti, con i migliori giochi di casinò
+							streaming italiani.</p>
+						<p>Una volta provato il live casino di Betnero non potrai fare a meno di chiederti perché non hai
+							aperto prima un conto di gioco dando una possibilità al casinò live di mostrarti tutto il suo
+							potenziale. Il punto di forza di giocare live è di provare le stesse sensazioni dei casinò
+							terrestri di Las Vegas.</p>
 						<!-- SHOW MORE BLOCK -->
 						<div data-showmore class="betnero_show-more">
 							<div data-showmore-content="0" class="betnero_show-more__content">
@@ -805,13 +804,13 @@
 
 					<!-- TEXT-BLOCK -->
 					<div class="betnero_info-block__text-block">
-						<h3 class="betnero_info-block__text-block_title">Casino Online: i Migliori Bonus</h3>
-						<p>BetNero offre ai giocatori una serie di favolosi casino bonus: scopriamo insieme cosa sono e come
-							ottenerli!</p>
-						<p>I bonus del casinò sono uno dei principali vantaggi che avrai a disposizione giocando in un casino
-							online invece che in un casinò terrestre. Vediamo insieme quali sono i tre bonus più popolari e,
-							soprattutto, i migliori tipi di bonus di casinò per divertirti con i giochi più popolari qui su
-							BetNero:</p>
+						<h3 class="betnero_info-block__text-block_title">Roulette Live</h3>
+						<p>La vera grande star del gioco in streaming, la roulette live non necessita di grandi presentazioni
+							ed è in effetti uno dei giochi preferiti dagli italiani soprattutto da giocare online. Un croupier
+							in carne ed ossa è pronto a servirvi direttamente dalla sala di un casinò italiano, dove vivrete
+							l’emozionante gioco della roulette dal vivo. Fate le vostre scelte in termini di scommessa e quando
+							sarete pronti il croupier potrà azionare la roulette per vedere se la pallina si fermerà su una
+							delle caselle vincenti, a seconda delle tue puntate, regalandoti così grosse vincite.</p>
 						<p><img src="img/icons/double-arrow.png" alt="arrow">Il <a href="https://www.betnero.it/promozioni/casino-bonus-senza-deposito.html">bonus di casinò
 								senza deposito</a> è probabilmente il più ricercato, perché per ottenerlo ti sarà sufficiente
 							registrarti, divertendoti subito con i giochi del casino online in modo completamente gratuito.
@@ -833,17 +832,13 @@
 
 					<!-- TEXT-BLOCK -->
 					<div class="betnero_info-block__text-block">
-						<h3 class="betnero_info-block__text-block_title">Domande Frequenti sui Casino Online</h3>
-						<p>Passiamo ora a vedere insieme quali sono le domande che vengono poste più di frequente dai
-							giocatori sui casinò online e su come funzionano. Se non trovi una risposta alla domanda che stavi
-							cercando non esitare a contattarci: trovi il nostro numero di telefono, un apposito indirizzo
-							e-mail e un pratico form da compilare in fondo alla pagina, nella sezione Aiuto e Supporto.</p>
-						<h4 class="betnero_info-block__text-block_sub-title"><img src="img/icons/info.png" alt="info"> Come
-							posso aprire un conto in un casinò online?</h4>
-						<p>È davvero facilissimo aprire un conto di gioco su BetNero, basta solo che tu sia maggiorenne.
-							Cliccando su Registrati in alto a destra dovrai compilare un modulo con i tuoi dati e in soli 5
-							minuti sarai già pronto a giocare con soldi veri - usufruendo, se vorrai, anche del bonus di
-							benvenuto offerto da BetNero.</p>
+						<h3 class="betnero_info-block__text-block_title">Blackjack Live</h3>
+						<p>Nessuno più di un professionista di blackjack può comprendere quanto sia emozionante giocare questo
+							classico del casino dal vivo. Betnero ti dà la possibilità di farlo neo suo casinò live dove potrai
+							scegliere diverse varianti di blackjack e sfidare il banco, tutto in diretta streaming. Le migliori
+							telecamere e inquadrature ti regaleranno un'esperienza senza precedenti, senza il bisogno di
+							lasciare la tua casa o affrontare un qualche costoso viaggio fuori città per raggiungere un casinò
+							terrestre.</p>
 						<!-- SHOW MORE BLOCK -->
 						<div data-showmore class="betnero_show-more">
 							<div data-showmore-content="0" class="betnero_show-more__content">
