--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 			<li><a target="_blank" href="casino.html">Casino</a></li>
 			<li><a target="_blank" href="casino-subcategory.html">Casino / Subcategory</a></li>
 			<li><a target="_blank" href="live-casino.html">Live Casino</a></li>
+			<li><a target="_blank" href="bingo.html">Bingo</a></li>
 			<li><a target="_blank" href="search.html">Search Page</a></li>
 			<li><a target="_blank" href="search-results.html">Search page with results</a></li>
 
