--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 			<li><a target="_blank" href="casino-subcategory.html">Casino / Subcategory</a></li>
 			<li><a target="_blank" href="live-casino.html">Live Casino</a></li>
 			<li><a target="_blank" href="bingo.html">Bingo</a></li>
+			<li><a target="_blank" href="privacy.html">Termini, Condizioni e Privacy</a></li>
+			<li><a target="_blank" href="about-us.html">About Us with sub section navigation</a></li>
 			<li><a target="_blank" href="search.html">Search Page</a></li>
 			<li><a target="_blank" href="search-results.html">Search page with results</a></li>
 
