--- a/privacy.html
+++ b/privacy.html
@@ -2,7 +2,7 @@
 <html lang="it">
 
 <head>
-	<title>Search Page</title>
+	<title>Termini, Condizioni e Privacy</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
@@ -156,21 +156,89 @@
 
 
 
-			<!-- SECTION SEARCH -->
-			<div class="betnero_search-page">
-				<div class="betnero_search-page__container">
-					<form name="betnero_search_form" class="betnero_search-page-form" action="#" method="post">
-						<button type="submit" id="betnero_search_submit"></button>
-						<input autocomplete="off" type="text" name="betnero_search-input" placeholder="Cerca" id="betnero_search_input" class="input betnero_input">
-						<button type="reset" id="betnero_search_reset"></button>
-					</form>
+			<!-- SECTION top-line -->
+			<div class="betnero_top-line">
+				<div class="betnero_top-line__container">
+					<img src="img/banners/eighteen.svg" alt="18">
+					<span class="betnero_top-line__text">Il gioco è vietato ai minori di anni 18. Giocare troppo può causare
+						dipendenza patologica.Probabilità di vincita</span>
+					<img src="img/banners/ezgif.svg" alt="ADM">
 				</div>
 			</div>
-			<!-- End of SECTION SEARCH -->
+			<!-- End of SECTION top-line -->
 
 
 
 
+			<!-- SECTION GAMES -->
+			<section class="betnero_games betnero_first-section">
+				<div class="betnero_games__container betnero_bg-color-2">
+
+					<!-- breadcrumbs -->
+					<div class="betnero_breadcrumbs">
+						<div class="betnero_breadcrumbs__item">
+							<a href="">Home</a>
+						</div>
+						<div class="betnero_breadcrumbs__item">
+							Termini, Condizioni e Privacy
+						</div>
+					</div>
+					<!-- end of breadcrumbs -->
+
+
+					<!-- TEXT-BLOCK -->
+					<div class="betnero_info-block__text-block betnero_text-block-clear">
+						<h3 class="betnero_info-block__text-block_title">Termini, Condizioni e Privacy</h3>
+						<h4 class="betnero_text-block_sub-title">Contratto di gioco</h4>
+						<p>
+							Accedendo e giocando sul sito hai acconsentitoalle seguenti Condizioni Contrattuali: <a href="https://www.betnero.it/gioco-responsabile/contratto.html">Contratto di gioco</a>.
+						</p>
+						<h4 class="betnero_text-block_sub-title">Trattamento dei dati - Privacy</h4>
+						<p>
+							Il Concessionario e AAMS (<a href="http://www.aams.gov.it/">http://www.aams.gov.it/</a>) si
+							dichiarano soggetti alle disposizioni di legge
+							vigenti e si impegnano a rispettare in ogni momento la legislazione vigente in materia di privacy
+							nell'espletamento dei rispettivi obblighi.
+						</p>
+						<p>Per leggere l'informativa che hai accettato all'atto della registrazione: <a href="https://www.betnero.it/gioco-responsabile/privacy-policy.html">Informativa privacy</a></p>
+						<h4 class="betnero_text-block_sub-title">Normative di Riferimento</h4>
+						<p>Il Concessionario applica le seguenti normative: <a href="https://www.betnero.it/gioco-responsabile/normativa.html">Normative di Riferimento</a></p>
+						<h4 class="betnero_text-block_sub-title">Reclami</h4>
+						<p>
+							Il giocatore ha diritto ad esprimere eventuali reclami nei confronti del concessionarioe a
+							notificare
+							ad AAMS tale reclamo.
+						</p>
+						<p>Eventuali reclami possono essere inoltrati al concessionario ai seguenti indirizzi:</p>
+						<p>
+							via E-MAIL all'indirizzo <a href="mailto:assistenza@betnero.it">assistenza@betnero.it</a>
+							<br>
+							via POSTA ORDINARIA all'indirizzo:Cristaltec Entertainment S.r.l. - Via Baldo degli Ubaldi 168 -
+							00167 Roma
+						</p>
+						<p>
+							Per inoltrare reclami ad AAMS accedere dalla home page AAMS alla sezione <a href="http://www.aams.gov.it/?id=2444">CONTATTI</a> dove sono
+							elencati
+							gli indirizzi richiesti.
+						</p>
+						<h4 class="betnero_text-block_sub-title">Carta dei Servizi</h4>
+						<p>
+							La Carta dei servizi è uno strumento di informazione e di comunicazione che incide nei rapporti tra
+							il
+							giocatore dei giochi a distanza, il concessionario dei giochi a distanza ed AAMS
+							(<a href="http://www.aams.gov.it/">http://www.aams.gov.it/</a>) Il giocatore ha il diritto di esprimere eventuali reclami nei confronti
+							del
+							concessionario e a notificare ad AAMS (<a href="http://www.aams.gov.it/">http://www.aams.gov.it/</a>) tale reclamo.
+						</p>
+						<p>Tutti i dettagli sono disponibili al seguente link <a href="https://media.betnero.it/file/Carta_dei_servizi_AAMS_gioco_a_distanza.pdf">Scarica la Carta dei Servizi</a></p>
+
+
+					</div>
+					<!-- end of TEXT-BLOCK -->
+
+				</div>
+			</section>
+			<!-- End of SECTION GAMES -->
 
 
 		</main>
