--- a/home-logged.html
+++ b/home-logged.html
@@ -6,15 +6,15 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<!-- <link rel="stylesheet" href="css/style.min.css?_v=20230507221849"> -->
-	<link rel="stylesheet" href="css/style.css?_v=20230507221849">
+	<!-- <link rel="stylesheet" href="css/style.min.css?_v=20230508003747"> -->
+	<link rel="stylesheet" href="css/style.css?_v=20230508003747">
 	<meta name="robots" content="noindex, nofollow">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
-	<div class="betnero_wrapper">
-		<header class="betnero_header betnero_logged-in">
+	<div class="betnero_wrapper betnero_logged-in">
+		<header class="betnero_header">
 			<div id="betnero_header_simplebar" class="betnero_header__container">
 
 				<div class="betnero_header__mobile-line">
@@ -839,7 +839,7 @@
 
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20230507221849"></script>
+	<script src="js/app.min.js?_v=20230508003747"></script>
 </body>
 
 </html>
