--- a/index.html
+++ b/index.html
@@ -13,11 +13,14 @@
 		<h2>Ready pages:</h2>
 		<ul class="rootpage__list">
 			<li><a target="_blank" href="home.html">Home</a></li>
-			<li><a target="_blank" href="home-logged.html">Home logged in</a></li>
+			<li><a target="_blank" href="home-logged.html">Home logged in</a> (To pages with authorized users, add the
+				class 'betnero_logged-in' to the 'main' tag in the following line: &lt;main class='page'&gt; )</li>
 			<li><a target="_blank" href="casino.html">Casino</a></li>
 			<li><a target="_blank" href="casino-subcategory.html">Casino / Subcategory</a></li>
 			<li><a target="_blank" href="live-casino.html">Live Casino</a></li>
 			<li><a target="_blank" href="bingo.html">Bingo</a></li>
+			<li><a target="_blank" href="promotions.html">Promotions</a></li>
+			<li><a target="_blank" href="promo.html">Promotions / Promo</a></li>
 			<li><a target="_blank" href="privacy.html">Termini, Condizioni e Privacy</a></li>
 			<li><a target="_blank" href="about-us.html">About Us with sub section navigation</a></li>
 			<li><a target="_blank" href="search.html">Search Page</a></li>
