--- a/contact-us.html
+++ b/contact-us.html
@@ -2,7 +2,7 @@
 <html lang="it">
 
 <head>
-	<title>About us</title>
+	<title>Contact us</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
@@ -180,106 +180,101 @@
 							<a href="">Home</a>
 						</div>
 						<div class="betnero_breadcrumbs__item">
-							<a href="">Termini, Condizioni e Privacy</a>
-						</div>
-						<div class="betnero_breadcrumbs__item">
-							Sub Section 1
+							Termini, Condizioni e Privacy
 						</div>
 					</div>
 					<!-- end of breadcrumbs -->
 
 
-					<div class="betnero_navigations">
-						<!-- tabs -->
-						<div class="betnero_games__tabs">
-							<!-- Slider wrapper -->
-							<div class="betnero_tabs__slider swiper">
-								<!-- The moving part of the slider -->
-								<div class="betnero_tabs__wrapper swiper-wrapper">
-									<!-- Slide -->
-									<div class="betnero_tabs__slide swiper-slide">
-										<div class="betnero_games__tab betnero_games__tab-active">
-											<span>Sub Section 1</span>
-										</div>
-									</div>
-									<!-- Slide -->
-									<div class="betnero_tabs__slide swiper-slide">
-										<div class="betnero_games__tab">
-											<a href="" class="betnero_games__tab-link">
-												<span>Sub Section 2</span>
-											</a>
-										</div>
-									</div>
-									<!-- Slide -->
-									<div class="betnero_tabs__slide swiper-slide">
-										<div class="betnero_games__tab">
-											<a href="" class="betnero_games__tab-link">
-												<span>Sub Section 3</span>
-											</a>
-										</div>
-									</div>
-								</div>
-								<!-- buttons for navigation (left/right) -->
-								<button type="button" class="betnero_tabs-button-prev">
-									<img src="img/icons/arrow-white-left.svg" alt="left">
-								</button>
-								<button type="button" class="betnero_tabs-button-next">
-									<img src="img/icons/arrow-white-right.svg" alt="right">
-								</button>
-							</div>
-							<!-- end of Slider wrapper -->
-						</div>
-						<!-- end of tabs -->
-					</div>
-
 
 					<!-- TEXT-BLOCK -->
 					<div class="betnero_info-block__text-block betnero_text-block-clear">
-						<h3 class="betnero_info-block__text-block_title">About us</h3>
-						<h4 class="betnero_text-block_sub-title">Contratto di gioco</h4>
-						<p>
-							Accedendo e giocando sul sito hai acconsentitoalle seguenti Condizioni Contrattuali: <a href="https://www.betnero.it/gioco-responsabile/contratto.html">Contratto di gioco</a>.
-						</p>
-						<h4 class="betnero_text-block_sub-title">Trattamento dei dati - Privacy</h4>
-						<p>
-							Il Concessionario e AAMS (<a href="http://www.aams.gov.it/">http://www.aams.gov.it/</a>) si
-							dichiarano soggetti alle disposizioni di legge
-							vigenti e si impegnano a rispettare in ogni momento la legislazione vigente in materia di privacy
-							nell'espletamento dei rispettivi obblighi.
-						</p>
-						<p>Per leggere l'informativa che hai accettato all'atto della registrazione: <a href="https://www.betnero.it/gioco-responsabile/privacy-policy.html">Informativa privacy</a></p>
-						<h4 class="betnero_text-block_sub-title">Normative di Riferimento</h4>
-						<p>Il Concessionario applica le seguenti normative: <a href="https://www.betnero.it/gioco-responsabile/normativa.html">Normative di Riferimento</a></p>
-						<h4 class="betnero_text-block_sub-title">Reclami</h4>
-						<p>
-							Il giocatore ha diritto ad esprimere eventuali reclami nei confronti del concessionarioe a
-							notificare
-							ad AAMS tale reclamo.
-						</p>
-						<p>Eventuali reclami possono essere inoltrati al concessionario ai seguenti indirizzi:</p>
-						<p>
-							via E-MAIL all'indirizzo <a href="mailto:assistenza@betnero.it">assistenza@betnero.it</a>
-							<br>
-							via POSTA ORDINARIA all'indirizzo:Cristaltec Entertainment S.r.l. - Via Baldo degli Ubaldi 168 -
-							00167 Roma
-						</p>
-						<p>
-							Per inoltrare reclami ad AAMS accedere dalla home page AAMS alla sezione <a href="http://www.aams.gov.it/?id=2444">CONTATTI</a> dove sono
-							elencati
-							gli indirizzi richiesti.
-						</p>
-						<h4 class="betnero_text-block_sub-title">Carta dei Servizi</h4>
-						<p>
-							La Carta dei servizi è uno strumento di informazione e di comunicazione che incide nei rapporti tra
-							il
-							giocatore dei giochi a distanza, il concessionario dei giochi a distanza ed AAMS
-							(<a href="http://www.aams.gov.it/">http://www.aams.gov.it/</a>) Il giocatore ha il diritto di
-							esprimere eventuali reclami nei confronti
-							del
-							concessionario e a notificare ad AAMS (<a href="http://www.aams.gov.it/">http://www.aams.gov.it/</a>) tale reclamo.
-						</p>
-						<p>Tutti i dettagli sono disponibili al seguente link <a href="https://media.betnero.it/file/Carta_dei_servizi_AAMS_gioco_a_distanza.pdf">Scarica la
-								Carta dei Servizi</a></p>
+						<h3 class="betnero_info-block__text-block_title">Contattaci</h3>
+
+						<div class="betnero_contact">
+							<div class="betnero_contact__col betnero_contact__col-left">
+								<h4 class="betnero_contact__description">Contratto di gioco</h4>
+								<form action="#" method="POST">
+									<div class="betnero_contact__line">
+										<input type="text" name="contact-name" data-error="Error" placeholder="Nome e Cognome" class="input">
+									</div>
+									<div class="betnero_contact__line">
+										<input type="text" name="contact-phone" data-error="Error" placeholder="Telefono" class="input">
+									</div>
+									<div class="betnero_contact__line">
+										<input type="text" name="contact-email" data-error="Error" placeholder="E-Mail" class="input">
+									</div>
+									<div class="betnero_contact__line">
+										<textarea name="contact-message" placeholder="Messaggio"></textarea>
+									</div>
+									<div class="betnero_contact__line">
+										<div class="betnero_contact__captcha">
+											<div class="betnero_contact__captcha-image">
+												<img src="img/captcha.jpg" alt="captcha">
+											</div>
+											<div class="betnero_contact__captcha-text">
+												inserisci qui codice di controllo
+											</div>
+										</div>
+									</div>
+									<div class="betnero_contact__line">
+										<div class="checkbox">
+											<input id="c_1" data-error="Помилка" class="checkbox__input" type="checkbox" value="1" name="contact-check">
+											<label for="c_1" class="checkbox__label"><span class="checkbox__text">Ho letto e
+													accetto la Dichiarazione sulla <a href="">Privacy e Condizioni di
+														utilizzo</a>.</span></label>
+										</div>
+									</div>
+
+
+
+									<button type="submit" class="button">REGISTRATI</button>
+								</form>
+							</div>
+							<div class="betnero_contact__col">
+								<div class="betnero_contact__info">
+									<div class="betnero_contact__text">
+										Per ricevere assistenza o per inviare i documenti utilizza il seguente indirizzo e-mail:
+									</div>
+									<div class="betnero_contact__line">
+										<div class="betnero_contact__img">
+											<img src="img/icons/mail.svg" alt="mail">
+										</div>
+										<div class="betnero_contact__text-info">
+											<a href="mailto:assistenza@betnero.it">assistenza@betnero.it</a>
+										</div>
+									</div>
+									<div class="betnero_contact__line">
+										<div class="betnero_contact__img">
+											<img src="img/icons/questions.png" alt="info">
+										</div>
+										<div class="betnero_contact__text-info">
+											<div class="betnero_contact__strong">Il servizio è attivo:</div>
+											Lun - Ven:
+											<br>
+											dalle 10:00 alle 19:00
+											<br>
+											Sab - Dom:
+											<br>
+											dalle 14:00 alle 18:00
+										</div>
+									</div>
+									<div class="betnero_contact__line">
+										<div class="betnero_contact__img">
+											<img src="img/icons/phone.svg" alt="phone">
+										</div>
+										<div class="betnero_contact__text-info">
+											<div class="betnero_contact__strong">Il servizio è attivo:</div>
+											Lun - Ven:
+											<br>
+											dalle 10:00 alle 19:00
+											<br>
+											<a href="tel:00390240702352">02 40 70 23 52</a>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
 
 
 					</div>
