--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 			<li><a target="_blank" href="bingo.html">Bingo</a></li>
 			<li><a target="_blank" href="promotions.html">Promotions</a></li>
 			<li><a target="_blank" href="promo.html">Promotions / Promo</a></li>
+			<li><a target="_blank" href="contact-us.html">Contact us</a></li>
 			<li><a target="_blank" href="privacy.html">Termini, Condizioni e Privacy</a></li>
 			<li><a target="_blank" href="about-us.html">About Us with sub section navigation</a></li>
 			<li><a target="_blank" href="search.html">Search Page</a></li>
