--- a/casino.html
+++ b/casino.html
@@ -6,8 +6,8 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<!-- <link rel="stylesheet" href="css/style.min.css?_v=20230508084512"> -->
-	<link rel="stylesheet" href="css/style.css?_v=20230508084512">
+	<!-- <link rel="stylesheet" href="css/style.min.css?_v=20230508193339"> -->
+	<link rel="stylesheet" href="css/style.css?_v=20230508193339">
 	<meta name="robots" content="noindex, nofollow">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -72,8 +72,8 @@
 								</button>
 								<div class="spollers__body">
 									<ul>
-										<li><a href="">Più popolari</a></li>
-										<li><a href="">Slot Machine</a></li>
+										<li><a href="casino.html">Più popolari</a></li>
+										<li><a href="casino-subcategory.html">Slot Machine</a></li>
 										<li><a href="">Roulette Online</a></li>
 										<li><a href="">Blackjack Online</a></li>
 										<li><a href="">Giochi da tavolo</a></li>
@@ -92,7 +92,7 @@
 								</button>
 								<div class="spollers__body">
 									<ul>
-										<li><a href="">Più popolar</a></li>
+										<li><a href="live-casino.html">Più popolar</a></li>
 										<li><a href="">Live Ultime Uscite</a></li>
 										<li><a href="">Roulette Live</a></li>
 										<li><a href="">Blackjack Live</a></li>
@@ -125,7 +125,7 @@
 								</button>
 								<div class="spollers__body">
 									<ul>
-										<li><a href="">Lotterie</a></li>
+										<li><a href="bingo.html">Lotterie</a></li>
 										<li><a href="">Scommesse Ippica</a></li>
 										<li><a href="">Scommesse Virtuali</a></li>
 										<li><a href="">Giochi di Carte</a></li>
@@ -136,7 +136,7 @@
 						</div>
 						<!-- Spoilers end -->
 
-						<a href="" class="betnero_menu__link"><img src="img/icons/subscriptions.svg" alt="button">PROMOZIONI</a>
+						<a href="promotions.html" class="betnero_menu__link"><img src="img/icons/subscriptions.svg" alt="button">PROMOZIONI</a>
 						<a href="" class="betnero_menu__link"><img src="img/icons/subscriptions.svg" alt="button">BLOG</a>
 
 						<div class="betnero_header__logo-mobile">
@@ -269,10 +269,10 @@
 					<!-- breadcrumbs -->
 					<div class="betnero_breadcrumbs">
 						<div class="betnero_breadcrumbs__item">
-							<a href="">Home</a>
+							<a href="home.html">Home</a>
 						</div>
 						<div class="betnero_breadcrumbs__item">
-							<a href="">Casino</a>
+							<a href="casino.html">Casino</a>
 						</div>
 						<div class="betnero_breadcrumbs__item">
 							Più popolari
@@ -369,7 +369,7 @@
 						<div class="betnero_games__thumbs">
 
 							<!-- Slider wrapper -->
-							<div class="games-thumbs__slider swiper">
+							<div class="games-thumbs__slider-1 swiper">
 								<!-- The moving part of the slider -->
 								<div class="games-thumbs__wrapper swiper-wrapper">
 									<!-- Slide -->
@@ -469,11 +469,25 @@
 										</a>
 									</div>
 								</div>
+
+								<!-- Buttons for navigation (left/right) -->
+								<button type="button" class="betnero_swiper-button-prev-1">
+									<img src="img/icons/arrow-white-left.svg" alt="left">
+								</button>
+								<button type="button" class="betnero_swiper-button-next-1">
+									<img src="img/icons/arrow-white-right.svg" alt="right">
+								</button>
+
 							</div>
 
 						</div>
 					</div>
 					<!-- end of ROW WITH SMALL THUMBS -->
+
+
+
+
+
 
 					<!-- ROW WITH HIGH THUMBS -->
 					<div class="betnero_games__row betnero_high-thumbs">
@@ -484,7 +498,7 @@
 						<div class="betnero_games__thumbs">
 
 							<!-- Slider wrapper -->
-							<div class="games-thumbs__slider swiper">
+							<div class="games-thumbs__slider-2 swiper">
 								<!-- The moving part of the slider -->
 								<div class="games-thumbs__wrapper swiper-wrapper">
 									<!-- Slide -->
@@ -584,6 +598,15 @@
 										</a>
 									</div>
 								</div>
+
+								<!-- Buttons for navigation (left/right) -->
+								<button type="button" class="betnero_swiper-button-prev-2">
+									<img src="img/icons/arrow-white-left.svg" alt="left">
+								</button>
+								<button type="button" class="betnero_swiper-button-next-2">
+									<img src="img/icons/arrow-white-right.svg" alt="right">
+								</button>
+
 							</div>
 
 						</div>
@@ -599,7 +622,7 @@
 						<div class="betnero_games__thumbs">
 
 							<!-- Slider wrapper -->
-							<div class="games-thumbs__slider swiper">
+							<div class="games-thumbs__slider-3 swiper">
 								<!-- The moving part of the slider -->
 								<div class="games-thumbs__wrapper swiper-wrapper">
 									<!-- Slide -->
@@ -699,11 +722,22 @@
 										</a>
 									</div>
 								</div>
+
+								<!-- Buttons for navigation (left/right) -->
+								<button type="button" class="betnero_swiper-button-prev-3">
+									<img src="img/icons/arrow-white-left.svg" alt="left">
+								</button>
+								<button type="button" class="betnero_swiper-button-next-3">
+									<img src="img/icons/arrow-white-right.svg" alt="right">
+								</button>
+
 							</div>
 
 						</div>
 					</div>
 					<!-- end of ROW WITH SMALL THUMBS -->
+
+
 
 					<!-- ROW WITH WIDE THUMBS -->
 					<div class="betnero_games__row betnero_wide-thumbs">
@@ -714,7 +748,7 @@
 						<div class="betnero_games__thumbs">
 
 							<!-- Slider wrapper -->
-							<div class="games-thumbs__slider swiper">
+							<div class="games-thumbs__slider-4 swiper">
 								<!-- The moving part of the slider -->
 								<div class="games-thumbs__wrapper swiper-wrapper">
 									<!-- Slide -->
@@ -814,12 +848,22 @@
 										</a>
 									</div>
 								</div>
-							</div>
 
+								<!-- Buttons for navigation (left/right) -->
+								<button type="button" class="betnero_swiper-button-prev-4">
+									<img src="img/icons/arrow-white-left.svg" alt="left">
+								</button>
+								<button type="button" class="betnero_swiper-button-next-4">
+									<img src="img/icons/arrow-white-right.svg" alt="right">
+								</button>
+
+							</div>
 						</div>
 					</div>
 					<!-- end of ROW WITH WIDE THUMBS -->
 
+
+
 					<!-- ROW WITH SMALL THUMBS -->
 					<div class="betnero_games__row betnero_small-thumbs">
 						<h4 class="betnero_games__row_rubric">
@@ -829,7 +873,7 @@
 						<div class="betnero_games__thumbs">
 
 							<!-- Slider wrapper -->
-							<div class="games-thumbs__slider swiper">
+							<div class="games-thumbs__slider-5 swiper">
 								<!-- The moving part of the slider -->
 								<div class="games-thumbs__wrapper swiper-wrapper">
 									<!-- Slide -->
@@ -929,11 +973,21 @@
 										</a>
 									</div>
 								</div>
-							</div>
 
+								<!-- Buttons for navigation (left/right) -->
+								<button type="button" class="betnero_swiper-button-prev-5">
+									<img src="img/icons/arrow-white-left.svg" alt="left">
+								</button>
+								<button type="button" class="betnero_swiper-button-next-5">
+									<img src="img/icons/arrow-white-right.svg" alt="right">
+								</button>
+
+							</div>
 						</div>
 					</div>
 					<!-- end of ROW WITH SMALL THUMBS -->
+
+
 
 					<!-- ROW WITH SMALL THUMBS -->
 					<div class="betnero_games__row betnero_small-thumbs">
@@ -944,7 +998,7 @@
 						<div class="betnero_games__thumbs">
 
 							<!-- Slider wrapper -->
-							<div class="games-thumbs__slider swiper">
+							<div class="games-thumbs__slider-6 swiper">
 								<!-- The moving part of the slider -->
 								<div class="games-thumbs__wrapper swiper-wrapper">
 									<!-- Slide -->
@@ -1047,8 +1101,16 @@
 									<!-- <button type="button" class="swiper-button-prev"></button>
 									<button type="button" class="swiper-button-next"></button> -->
 								</div>
-							</div>
 
+								<!-- Buttons for navigation (left/right) -->
+								<button type="button" class="betnero_swiper-button-prev-6">
+									<img src="img/icons/arrow-white-left.svg" alt="left">
+								</button>
+								<button type="button" class="betnero_swiper-button-next-6">
+									<img src="img/icons/arrow-white-right.svg" alt="right">
+								</button>
+
+							</div>
 						</div>
 					</div>
 					<!-- end of ROW WITH SMALL THUMBS -->
@@ -1218,7 +1280,7 @@
 
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20230508084512"></script>
+	<script src="js/app.min.js?_v=20230508193339"></script>
 </body>
 
 </html>
