--- a/home-logged.html
+++ b/home-logged.html
@@ -6,8 +6,8 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<!-- <link rel="stylesheet" href="css/style.min.css?_v=20230508084512"> -->
-	<link rel="stylesheet" href="css/style.css?_v=20230508084512">
+	<!-- <link rel="stylesheet" href="css/style.min.css?_v=20230508193339"> -->
+	<link rel="stylesheet" href="css/style.css?_v=20230508193339">
 	<meta name="robots" content="noindex, nofollow">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -72,8 +72,8 @@
 								</button>
 								<div class="spollers__body">
 									<ul>
-										<li><a href="">Più popolari</a></li>
-										<li><a href="">Slot Machine</a></li>
+										<li><a href="casino.html">Più popolari</a></li>
+										<li><a href="casino-subcategory.html">Slot Machine</a></li>
 										<li><a href="">Roulette Online</a></li>
 										<li><a href="">Blackjack Online</a></li>
 										<li><a href="">Giochi da tavolo</a></li>
@@ -92,7 +92,7 @@
 								</button>
 								<div class="spollers__body">
 									<ul>
-										<li><a href="">Più popolar</a></li>
+										<li><a href="live-casino.html">Più popolar</a></li>
 										<li><a href="">Live Ultime Uscite</a></li>
 										<li><a href="">Roulette Live</a></li>
 										<li><a href="">Blackjack Live</a></li>
@@ -125,7 +125,7 @@
 								</button>
 								<div class="spollers__body">
 									<ul>
-										<li><a href="">Lotterie</a></li>
+										<li><a href="bingo.html">Lotterie</a></li>
 										<li><a href="">Scommesse Ippica</a></li>
 										<li><a href="">Scommesse Virtuali</a></li>
 										<li><a href="">Giochi di Carte</a></li>
@@ -136,7 +136,7 @@
 						</div>
 						<!-- Spoilers end -->
 
-						<a href="" class="betnero_menu__link"><img src="img/icons/subscriptions.svg" alt="button">PROMOZIONI</a>
+						<a href="promotions.html" class="betnero_menu__link"><img src="img/icons/subscriptions.svg" alt="button">PROMOZIONI</a>
 						<a href="" class="betnero_menu__link"><img src="img/icons/subscriptions.svg" alt="button">BLOG</a>
 
 						<div class="betnero_header__logo-mobile">
@@ -839,7 +839,7 @@
 
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20230508084512"></script>
+	<script src="js/app.min.js?_v=20230508193339"></script>
 </body>
 
 </html>
