--- a/index.html
+++ b/index.html
@@ -63,7 +63,13 @@
 
 	a {
 		text-decoration: underline;
-		color: #ebe691
+		color: #ebe691;
+		font-size: 18px;
+	}
+
+	li {
+		font-size: 14px;
+		color: rgba(255, 255, 255, 0.66);
 	}
 
 	a:visited {
